--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "mongoose": "^6.11.5",
     "next": "13.4.16",
     "next-themes": "^0.2.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.2.1",
     "tailwindcss": "3.3.3"
   }
 }
