--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "mongoose": "^6.11.5",
     "next": "13.4.16",
+    "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
